# SerialPortApp

./: CMakeLists.txt
inc/: SerialPortClient.h
qml/: main.qml
src/: CMakeLists.txt  SerialPortClient.cpp  main.cpp
